# Process-Hollowing

./: .gitignore  CMakeLists.txt  DLLFunctionsLoader.cpp  DLLFunctionsLoader.hpp  Hollowing32Bit.cpp  Hollowing32Bit.hpp  Hollowing64Bit.cpp  Hollowing64Bit.hpp  HollowingFunctions.hpp  HollowingInterface.hpp  Main.cpp  NtdllFunctions.cpp  NtdllFunctions.hpp  ProcedurePointer.cpp  ProcedurePointer.hpp  ProcessHollowing.cpp  ProcessHollowing.hpp  README.md
exceptions/: FileException.cpp  FileException.hpp  HollowingException.cpp  HollowingException.hpp  ImageWindowsBitnessException.cpp  ImageWindowsBitnessException.hpp  IncompatibleImagesException.cpp  IncompatibleImagesException.hpp
